--- a/TreeLine.Sagas/TreeLine.Sagas.csproj
+++ b/TreeLine.Sagas/TreeLine.Sagas.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Messaging\Validation\" />
+  </ItemGroup>
+
 </Project>
