--- a/src/TreeLine.Sagas.DependencyInjection/TreeLine.Sagas.DependencyInjection.csproj
+++ b/src/TreeLine.Sagas.DependencyInjection/TreeLine.Sagas.DependencyInjection.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
+
+    <Summary>Saga orchestrator for distributed systems.</Summary>
+    <Description>Saga orchestrator for distributed systems.</Description>
+    <PackageProjectUrl>https://github.com/aserowy/TreeLine.Sagas</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/aserowy/TreeLine.Sagas/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/aserowy/TreeLine.Sagas</RepositoryUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
