ab#22 added tests for validation; added abstraction for ilogger

--- a/src/TreeLine.Sagas.Validation.Tests/TreeLine.Sagas.Validation.Tests.csproj
+++ b/src/TreeLine.Sagas.Validation.Tests/TreeLine.Sagas.Validation.Tests.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TreeLine.Sagas.DependencyInjection\TreeLine.Sagas.DependencyInjection.csproj" />
+    <ProjectReference Include="..\TreeLine.Sagas.Validation\TreeLine.Sagas.Validation.csproj" />
   </ItemGroup>
 
 </Project>
