--- a/src/TreeLine.Sagas.DependencyInjection/TreeLine.Sagas.DependencyInjection.csproj
+++ b/src/TreeLine.Sagas.DependencyInjection/TreeLine.Sagas.DependencyInjection.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
