ab#22 added service provider extension to validate sagas

--- a/src/TreeLine.Sagas.DependencyInjection/TreeLine.Sagas.DependencyInjection.csproj
+++ b/src/TreeLine.Sagas.DependencyInjection/TreeLine.Sagas.DependencyInjection.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TreeLine.Sagas.Validation\TreeLine.Sagas.Validation.csproj" />
     <ProjectReference Include="..\TreeLine.Sagas\TreeLine.Sagas.csproj" />
   </ItemGroup>
 
