--- a/src/TreeLine.Sagas.DependencyInjection/TreeLine.Sagas.DependencyInjection.csproj
+++ b/src/TreeLine.Sagas.DependencyInjection/TreeLine.Sagas.DependencyInjection.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
 
-    <Summary>Saga orchestrator for distributed systems.</Summary>
-    <Description>Saga orchestrator for distributed systems.</Description>
+    <Summary>DI extensions for saga orchestrator.</Summary>
+    <Description>DI extensions for saga orchestrator.</Description>
     <PackageProjectUrl>https://github.com/aserowy/TreeLine.Sagas</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/aserowy/TreeLine.Sagas/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
@@ -20,9 +20,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TreeLine.Sagas.Validation\TreeLine.Sagas.Validation.csproj" />
     <ProjectReference Include="..\TreeLine.Sagas\TreeLine.Sagas.csproj" />
   </ItemGroup>
 
