--- a/src/TreeLine.Sagas.Abstractions/TreeLine.Sagas.Abstractions.csproj
+++ b/src/TreeLine.Sagas.Abstractions/TreeLine.Sagas.Abstractions.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -23,11 +23,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SemanticVersioning" Version="1.2.2" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\TreeLine.Sagas.EventStore\TreeLine.Sagas.EventStore.csproj" />
-  </ItemGroup>
-
+  
 </Project>
