--- a/src/TreeLine.Sagas.EventStore/TreeLine.Sagas.EventStore.csproj
+++ b/src/TreeLine.Sagas.EventStore/TreeLine.Sagas.EventStore.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
 
-    <Summary>Saga orchestrator for distributed systems.</Summary>
+    <Summary>Event store for saga orchestrator.</Summary>
     <Description>Saga orchestrator for distributed systems.</Description>
     <PackageProjectUrl>https://github.com/aserowy/TreeLine.Sagas</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/aserowy/TreeLine.Sagas/blob/master/LICENSE</PackageLicenseUrl>
@@ -23,11 +23,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SemanticVersioning" Version="1.2.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TreeLine.Sagas.EventStore\TreeLine.Sagas.EventStore.csproj" />
+    <ProjectReference Include="..\TreeLine.Sagas.Abstractions\TreeLine.Sagas.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
