ab#21 reduced reference signature; removed obsolete code; rename store

--- a/src/TreeLine.Sagas/TreeLine.Sagas.csproj
+++ b/src/TreeLine.Sagas/TreeLine.Sagas.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TreeLine.Sagas.EventStore\TreeLine.Sagas.EventStore.csproj" />
+    <ProjectReference Include="..\TreeLine.Sagas.ReferenceStore\TreeLine.Sagas.ReferenceStore.csproj" />
   </ItemGroup>
 
 </Project>
