--- a/src/TreeLine.Sagas.ReferenceStore/TreeLine.Sagas.ReferenceStore.csproj
+++ b/src/TreeLine.Sagas.ReferenceStore/TreeLine.Sagas.ReferenceStore.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
 
-    <Summary>Event store for saga orchestrator.</Summary>
+    <Summary>Reference store for saga orchestrator.</Summary>
     <Description>Saga orchestrator for distributed systems.</Description>
     <PackageProjectUrl>https://github.com/aserowy/TreeLine.Sagas</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/aserowy/TreeLine.Sagas/blob/master/LICENSE</PackageLicenseUrl>
