ab# 21 added dependency injection for messaging

--- a/src/TreeLine.Messaging.DependencyInjection/TreeLine.Messaging.DependencyInjection.csproj
+++ b/src/TreeLine.Messaging.DependencyInjection/TreeLine.Messaging.DependencyInjection.csproj
@@ -1,12 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
 
-    <Summary>DI extensions for saga orchestrator.</Summary>
-    <Description>DI extensions for saga orchestrator.</Description>
+    <Summary>DI extensions for messaging.</Summary>
+    <Description>DI extensions for messaging.</Description>
     <PackageProjectUrl>https://github.com/aserowy/TreeLine.Sagas</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/aserowy/TreeLine.Sagas/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
@@ -23,12 +23,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TreeLine.Sagas.Validation\TreeLine.Sagas.Validation.csproj" />
-    <ProjectReference Include="..\TreeLine.Sagas\TreeLine.Sagas.csproj" />
+    <ProjectReference Include="..\TreeLine.Messaging\TreeLine.Messaging.csproj" />
   </ItemGroup>
 
 </Project>
