ab#38 reworked metrics; removed more strict metrics from test

--- a/src/TreeLine.Sagas/TreeLine.Sagas.csproj
+++ b/src/TreeLine.Sagas/TreeLine.Sagas.csproj
@@ -15,6 +15,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="CodeMetricsConfig.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="CodeMetricsConfig.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
