--- a/src/TreeLine.Messaging.Tests/.editorconfig
+++ b/src/TreeLine.Messaging.Tests/.editorconfig
@@ -3,6 +3,9 @@
 # CA1063: Implement IDisposable correctly
 dotnet_diagnostic.CA1063.severity = none
 
+# CA1506: Avoid excessive class coupling
+dotnet_diagnostic.CA1506.severity = none
+
 # CA1707: Identifiers should not contain underscores
 dotnet_diagnostic.CA1707.severity = none
 
