ab#38 fixed saga project; added nullable enabled to test projects

--- a/src/TreeLine.Sagas/TreeLine.Sagas.csproj
+++ b/src/TreeLine.Sagas/TreeLine.Sagas.csproj
@@ -15,15 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="CodeMetricsConfig.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <AdditionalFiles Include="CodeMetricsConfig.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
+    <AdditionalFiles Include="..\CodeMetricsConfig.txt" Link="CodeMetricsConfig.txt" />
   </ItemGroup>
 
   <ItemGroup>
